# currency-converter

./: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  schema.yml
.github/workflows/: build.pipeline.yaml
currency_converter/: serializers.py  settings.py  urls.py  views.py
currency_converter/migrations/: 0001_initial.py  0002_create_super_user.py
currency_converter/models/: __init__.py  transaction.py
currency_converter/serializers/: __init__.py  transaction.py
currency_converter/services/: exchanges_rates_data_api.py
currency_converter/views/: __init__.py  group.py  transaction.py  user.py
tests/: conftest.py  test_models.py  test_serializers.py  test_urls.py  test_views.py
tests/serializers/: test_group_serializer.py  test_transaction_serializer.py  test_user_serializer.py
tests/services/: test_exchanges_rates_data_api.py
tests/views/: test_group_view.py  test_transaction_view.py  test_user_view.py
